Fix: rearranged tests

--- a/00.DataStructures/DataStructures.Examples/DataStructures.Examples.csproj
+++ b/00.DataStructures/DataStructures.Examples/DataStructures.Examples.csproj
@@ -46,7 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PlayWithTrees.cs" />
+    <Compile Include="PlayGround.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
