--- a/00.DataStructures/DataStructure.Tests/DataStructure.Tests.csproj
+++ b/00.DataStructures/DataStructure.Tests/DataStructure.Tests.csproj
@@ -56,30 +56,30 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Lists\ArrayListTests.cs" />
-    <Compile Include="Lists\FirstLastList\PerformanceTestsFirstLastList.cs" />
+    <Compile Include="Lists\ArrayListUnitTests.cs" />
+    <Compile Include="Lists\FirstLastList\FirstLastListPerformanceTests.cs" />
     <Compile Include="Lists\FirstLastList\Template.cs" />
-    <Compile Include="Lists\FirstLastList\UnitTestsFirstLastList.cs" />
-    <Compile Include="HashSets\UnitTestsHashTable.cs" />
-    <Compile Include="Lists\LinkedListLabTests.cs" />
+    <Compile Include="Lists\FirstLastList\FirstLastListUnitTests.cs" />
+    <Compile Include="HashSets\HashTableUnitTests.cs" />
+    <Compile Include="Lists\LinkedListLabUnitTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Queues\TestsPriorityQueue.cs" />
-    <Compile Include="Trees\AVLLABTests.cs" />
-    <Compile Include="Trees\AVLTests.cs" />
+    <Compile Include="Queues\PriorityQueueUnitTests.cs" />
+    <Compile Include="Trees\AVLLABUnitTests.cs" />
+    <Compile Include="Trees\AVLUnitTests.cs" />
     <Compile Include="Trees\Quad\QuadTreeTests.cs" />
     <Compile Include="Trees\RedBlack\CorrectnessTests\InsertFirst.cs" />
     <Compile Include="Trees\RedBlack\CorrectnessTests\InsertSecond.cs" />
     <Compile Include="Trees\RedBlack\CorrectnessTests\InsertThird.cs" />
     <Compile Include="Trees\RedBlack\TimeTests\FifthTest.cs" />
     <Compile Include="Trees\RedBlack\TimeTests\InsertFourth.cs" />
-    <Compile Include="Trees\UnitTestsBinaryHeap.cs" />
-    <Compile Include="Trees\UnitTestsBinaryTree.cs" />
-    <Compile Include="Trees\UnitTestsBST-Lab.cs" />
-    <Compile Include="Trees\UnitTestsHeapSort.cs" />
-    <Compile Include="Trees\UnitTestsTree.cs" />
+    <Compile Include="Trees\BinaryHeapUnitTests.cs" />
+    <Compile Include="Trees\BinaryTreeUnitTests.cs" />
+    <Compile Include="Trees\BinarySearchTreeLabUnitTests.cs" />
+    <Compile Include="Trees\HeapSortUnitTests.cs" />
+    <Compile Include="Trees\TreeUnitTests.cs" />
     <Compile Include="Trees\TriePerformanceTester.cs" />
-    <Compile Include="Queues\UnitTestsCircularQueue.cs" />
-    <Compile Include="Lists\UnitTestsDoublyLinkedList.cs" />
+    <Compile Include="Queues\CircularQueueUnitTests.cs" />
+    <Compile Include="Lists\DoublyLinkedListUnitTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
